# sentinelflux-website

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Jenkinsfile  LICENSE  Makefile  README.md  about.html  blog.html  changelog.html  conftest.py  index.html  mkdocs.yml  portfolio.html  privacy.html  pyproject.toml  pytest.ini  requirements.txt  robots.txt  run_pipeline.sh  security.html  setup_ai_generator.sh  status.html  stdout  terms.html  validate.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-website.yml  publish.yml
agentpulse/: index.html
agentpulse/blog/: alerting-not-dashboards.html  why-we-built-agentpulse.html
agentpulse/docs/: index.html
ai/: __init__.py  generate_api_test_doc.py  generate_test_case_doc.py
ai/agents/: __init__.py  app_explorer_agent.py  base_agent.py  coverage_gap_agent.py  cto_agent.py  doc_gen_agent.py  doc_review_agent.py  flaky_detector_agent.py  locator_healer_agent.py  product_review_agents.py  quarantine_manager.py  registry.py  regression_guard_agent.py  result_analyzer_agent.py  script_gen_agent.py  script_review_agent.py  sentinel_orchestrator.py
ai/clients/: __init__.py  anthropic_client.py  base_client.py  mistral_client.py  openai_client.py
ai/context/: RESUME.md  agent_config.yaml  conventions.md
ai/knowledge_base/: __init__.py  api_specs.yaml  application.yaml  auto_test_generator.py  feature_changelog.md  kb_loader.py  product_knowledge.yaml  ui_pages.yaml
ai/pipeline/: orchestrator.py
ai/prompts/: __init__.py  prompt_templates.py
ai/skills/: __init__.py  api_source_parser.py  app_exploration.py  docx_converter.py  self_healing.py  test_case_doc.py  test_case_doc_kb.py  test_script_gen.py
api/: graphql_client.py  orangehrm_client.py  rest_client.py
api/endpoints/: graphql_endpoints.json
blog/: accessibility-testing-wcag.html  api-contract-testing.html  bootstrapping-kb-from-docs.html  change-driven-coverage.html  flaky-tests-vs-real-bugs.html  github-actions-setup.html  how-locator-healing-works.html  humans-in-the-loop.html  owasp-vapt-module.html  performance-testing-simplified.html  structuring-your-knowledge-base.html  visual-regression-testing.html  why-we-built-sentinelflux.html
config/: env_qa.yaml  env_staging.yaml  env_template.yaml
core/: a11y_manager.py  activity_log.py  ai_factory.py  ai_registry.py  approval_manager.py  audit_logger.py  bug_manager.py  contract_manager.py  db.py  insights_manager.py  perf_manager.py  roadmap_manager.py  run_manager.py  test_plan_manager.py  vapt_manager.py  vapt_test_generator.py  visual_manager.py
dashboard/: agent_meta.py  app.py  chat_config.json
dashboard/routers/: a11y.py  activities.py  agents.py  approval_dispatch.py  approvals.py  auth.py  bugs.py  chat.py  config_router.py  docs.py  (+14 more)
data/: activity_log.json  kb_increments_log.yaml  pipeline_jobs.json  run_history.yaml  test_assignments.yaml  test_runs.json
docforge/: blog.html  index.html
docs/: AI_KB_INTEGRATION.md  KNOWLEDGE_BASE_GUIDE.md  KNOWLEDGE_BASE_IMPLEMENTATION.md  PRODUCT_KNOWLEDGE_GUIDE.md  ai_skills.md  api_test_generation.md  docs.js  index.md  test_generation.md  web_test_generation.md
docs-site/: CNAME  docs.js  index.html
features/: agent-activities.html  approvals.html  quality-dashboard.html  test-plans.html  test-runs.html
framework_knowledge/: RESUME.md  activity_log.json  agent_config.yaml  architecture.md  config.yaml  kb_increments_log.yaml  pending_approvals.yaml  pipeline_jobs.json  quarantine.yaml  run_history.yaml  test_assignments.yaml  test_runs.json  test_schedules.json
modules/: accessibility.html  api-contract.html  bug-tracker.html  compliance-reports.html  performance.html  rest-graphql.html  security.html  visual-regression.html  web-ui.html
pages/: base_page.py
scripts/: Caddyfile  Caddyfile.prod  caddy-reload.sh  deploy.sh  fix_doc_fences.py  gcp-setup.sh  migrate_to_sqlite.py  pipeline_coverage_fix_orangehrm.sh  run_coverage_gap_orangehrm.py  run_pipeline.sh  seed_admin.py  sentinelflux.service  server-setup.sh  setup_ai_generator.sh  start-local.sh  validate.sh
sentinelflux/: cli.py
specvault/: blog.html  index.html
talentdesk/: index.html
utils/: activity_log.py  ai_assertions.py  ai_factory.py  approval_manager.py  assertions.py  browser_use_agent.py  constants.py  locator_manager.py  logger.py  paths.py  run_manager.py  skyvern_client.py  step.py  wait.py
vigilqa/: blog.html  index.html
website/: about.html  blog.html  changelog.html  index.html  portfolio.html  privacy.html  security.html  sitemap.xml  status.html  terms.html
(+614 files in other folders)
