[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinelflux"
version = "0.1.0"
description = "Production-grade Python test automation framework with AI-assisted test generation, self-healing locators, and full failure artifact collection."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "SentinelFlux Contributors" }]
requires-python = ">=3.10"
keywords = ["testing", "automation", "playwright", "api", "ai", "self-healing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pytest>=8.0",
    "pytest-playwright>=0.4.0",
    "pytest-xdist>=3.0",
    "pytest-html>=4.0",
    "pytest-json-report>=1.5.0",
    "playwright>=1.40.0",
    "requests>=2.30.0",
    "gql>=3.0.0",
    "PyYAML>=6.0",
    "pydantic>=2.9",
    "loguru>=0.7.0",
    "jsonschema>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = [
    "mistralai>=1.0.0",
    "httpx>=0.27.0",
]
mobile = [
    "appium-python-client>=2.11.0",
]
reportportal = [
    "pytest-reportportal>=3.1",
]
dashboard = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "markdown>=3.6",
]
all = [
    "sentinelflux[ai,mobile,reportportal,dashboard]",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "mkdocs-material>=9.5",
]

[project.scripts]
sentinelflux = "sentinelflux.cli:app"

[project.urls]
Homepage = "https://github.com/sentinelflux/sentinelflux"
Documentation = "https://github.com/sentinelflux/sentinelflux/tree/main/docs"
Issues = "https://github.com/sentinelflux/sentinelflux/issues"

[tool.hatch.build.targets.wheel]
packages = [
    "sentinelflux",
    "ai",
    "api",
    "pages",
    "utils",
    "locators",
    "schemas",
    "dashboard",
]
include = [
    "config/env_template.yaml",
    "sentinelflux/templates/**",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
